springboot-kafka-producer/openshift/openshift.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-producer
  labels:
    app: kafka-producer
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: kafka-producer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-producer
  labels:
    app: kafka-producer
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-producer
  template:
    metadata:
      labels:
        app: kafka-producer
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: app
          image: image-registry.openshift-image-registry.svc:5000/kafka-tracing/kafka-producer
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
