springboot-kafka-producer/openshift/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kafka-producer
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "kafka-producer-istio-system.apps.ocp1.example.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kafka-producer
spec:
  hosts:
    - "kafka-producer-istio-system.apps.ocp1.example.com"
  gateways:
    - kafka-producer
  http:
    - route:
        - destination:
            host: kafka-producer
            port:
              number: 8080
